--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script src = "cepheids.js"></script>
+
 <h1> Cepheid Variable Exercise</h1>
+
 <p>This form is for submitting your answers to the Discovering Astronomy workshop 5.  See the worksheet for full instructions.</p>
 
-<p>You need to have your email configured on your device to use this page.</p>
+<p>You need to have your email configured on your device to use this page.  If you have problems filling this in or submiting then please let us know as soon as possible.</p>
+
+
 <h2> Part 2.1</h2>
 <!-- Form for plotting. -->
 <!-- Return false prevents the page from being reloaded on submitting -->
@@ -67,8 +71,9 @@
 </table>
 
 <P><input form="cepheid_form" type="submit" value="Plot"> </P>
-<div id="space_for_plot">
 
+<div id="space_for_plot">
+<!-- The javascript puts the plot here. -->
 </div>
 
 <hr>
