--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
 <form id="pdf_form" onsubmit="makePDF(); return false;"></form>
 <TABLE>
     <TR>
+        <TH></TH>
+        <TH>Input</TH>
+    </TR>
+    <TR>
         <TD><label for="name">Your Name:</label></TD>
         <TD><input form="email_form" type="text" id="name" name="name"></TD>
     </TR>
